# alap

./: .dockerignore  .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  START-Creators.md  START-Dev.md  env.d.ts  eslint.config.js  example.js  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.qwik.json  tsconfig.solid.json  turbo.json  vite.config.iife.ts  vite.config.ts  vite.example.config.ts  vitest.packaging.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: FAQ.md  README.md  alap-export-sizes.md  start-creators.md  start-dev.md
docs/api-reference/: README.md  config-registry.md  coordinators.md  embeds.md  engine.md  events.md  lens.md  lightbox.md  openapi.yaml  placement.md  security.md  servers.md  spec.md  storage.md  types.md
docs/cookbook/: README.md  accessibility.md  editors.md  embeds.md  existing-urls.md  hn.md  images-and-media.md  (+11 more)
editors/: README.md
examples/: Config.js  README.md  example.css  example.js  index.html  styles.css
examples/servers/axum-sqlite/: .gitignore  Cargo.toml  Dockerfile  README.md
examples/servers/axum-sqlite/public/: index.html
examples/servers/axum-sqlite/src/: main.rs
integrations/: README.md
plugins/: README.md
scripts/: clean-all.sh  feed_to_md.py  security-audit.sh  smoke-entrypoints.sh  smoke-examples.sh  vault_convert.py  vault_demo.py  vault_docs.py
src/: constants.ts  env.d.ts  iife.ts  index.js  index.ts  slim.ts
tests/: README.md  setup.ts
(+1217 files in other folders)
