[package]
name    = "alap-axum-sqlite"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
alap       = { path = "../../../src/other-languages/rust" }
anyhow     = "1"
axum       = "0.8"
regex      = "1"
rusqlite   = { version = "0.32", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
